# SolidVoxelization

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
ext/: CMakeLists.txt
ext/glad/: CMakeLists.txt
ext/imgui/: CMakeLists.txt
src/: CMakeLists.txt  gui.cpp  main.cpp  mesh.cpp  mesh.h  ray.h  stream.cpp  stream.h  volume.cpp  volume.h
src/app/: CMakeLists.txt  main-gpu.cpp  main.cpp
src/core/: CMakeLists.txt  bbox.h  camera.cpp  camera.h  framerate.cpp  framerate.h  mesh.cpp  mesh.h  octree.cpp  ray.h  segment.h  stream.cpp  texture.h  volume.cpp  volume.h  window.cpp  window.h
src/gpu/: CMakeLists.txt  common.h  cuda_camera.cu  cuda_camera.h  cuda_octree.cu  cuda_octree.h
