add_library(sv-ext INTERFACE)

set(ASSIMP_NO_EXPORT ON CACHE BOOL "" FORCE)
set(ASSIMP_BUILD_ASSIMP_TOOLS OFF CACHE BOOL "" FORCE)
set(ASSIMP_BUILD_TESTS OFF CACHE BOOL "" FORCE)
set(ASSIMP_INSTALL OFF CACHE BOOL "" FORCE)
add_subdirectory(assimp)
target_link_libraries(sv-ext INTERFACE assimp::assimp)

add_subdirectory(glm)
target_link_libraries(sv-ext INTERFACE glm::glm)

set(EMBREE_GEOMETRY_QUAD OFF CACHE BOOL "" FORCE)
set(EMBREE_GEOMETRY_CURVE OFF CACHE BOOL "" FORCE)
set(EMBREE_GEOMETRY_SUBDIVISION OFF CACHE BOOL "" FORCE)
set(EMBREE_GEOMETRY_USER OFF CACHE BOOL "" FORCE)
set(EMBREE_GEOMETRY_INSTANCE OFF CACHE BOOL "" FORCE)
set(EMBREE_GEOMETRY_GRID OFF CACHE BOOL "" FORCE)
set(EMBREE_GEOMETRY_POINT OFF CACHE BOOL "" FORCE)
set(EMBREE_STATIC_LIB OFF CACHE BOOL "" FORCE)
set(EMBREE_TASKING_SYSTEM "INTERNAL" CACHE STRING "" FORCE)
add_subdirectory(embree)
target_link_libraries(sv-ext INTERFACE embree)

find_package(OpenCV REQUIRED)
target_link_libraries(sv-ext INTERFACE ${OpenCV_LIBS})
