add_library(sv-ext INTERFACE)

find_package(assimp CONFIG)
if (NOT assimp_FOUND)
    set(ASSIMP_NO_EXPORT ON CACHE BOOL "" FORCE)
    set(ASSIMP_BUILD_ASSIMP_TOOLS OFF CACHE BOOL "" FORCE)
    set(ASSIMP_BUILD_TESTS OFF CACHE BOOL "" FORCE)
    set(ASSIMP_INSTALL OFF CACHE BOOL "" FORCE)
    add_subdirectory(assimp)
endif ()
target_link_libraries(sv-ext INTERFACE assimp::assimp)

add_subdirectory(glm)
target_link_libraries(sv-ext INTERFACE glm::glm)

find_package(embree 3.0 CONFIG)
if (NOT embree_FOUND)
    set(EMBREE_GEOMETRY_QUAD OFF CACHE BOOL "" FORCE)
    set(EMBREE_GEOMETRY_CURVE OFF CACHE BOOL "" FORCE)
    set(EMBREE_GEOMETRY_SUBDIVISION OFF CACHE BOOL "" FORCE)
    set(EMBREE_GEOMETRY_USER OFF CACHE BOOL "" FORCE)
    set(EMBREE_GEOMETRY_INSTANCE OFF CACHE BOOL "" FORCE)
    set(EMBREE_GEOMETRY_GRID OFF CACHE BOOL "" FORCE)
    set(EMBREE_GEOMETRY_POINT OFF CACHE BOOL "" FORCE)
    set(EMBREE_STATIC_LIB OFF CACHE BOOL "" FORCE)
    set(EMBREE_TASKING_SYSTEM "INTERNAL" CACHE STRING "" FORCE)
    add_subdirectory(embree)
endif ()
target_link_libraries(sv-ext INTERFACE embree)

find_package(OpenCV CONFIG REQUIRED)
target_link_libraries(sv-ext INTERFACE ${OpenCV_LIBS})

find_package(OpenGL REQUIRED)
target_link_libraries(sv-ext INTERFACE OpenGL::GL)

find_package(GLFW3 CONFIG REQUIRED)
if (NOT GLFW3_FOUND)
    set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
    set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
    set(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
    set(GLFW_INSTALL OFF CACHE BOOL "" FORCE)
    set(BUILD_SHARED_LIBS OFF)
    add_subdirectory(glfw)
endif ()
target_link_libraries(sv-ext INTERFACE glfw)
